# tyme4cpp

tests/: CMakeLists.txt  run_tests.bat  run_tests.sh
tyme/: CMakeLists.txt  abstract_culture.cpp  abstract_culture.h  base.cpp  base.h  childlimit.cpp  childlimit.h  culture.cpp  culture.h  dog.cpp  dog.h  eightchar.cpp  eightchar.h  festival.cpp  festival.h  fetus.cpp  fetus.h  lunar.cpp  lunar.h  nine.cpp  nine.h  pengzu.cpp  pengzu.h  phenology.cpp  phenology.h  plumrain.cpp  plumrain.h  rabbyung.cpp  rabbyung.h  ren.cpp  ren.h  seasonal.cpp  seasonal.h  sixtycycle.cpp  sixtycycle.h  solar.cpp  solar.h  star.cpp  star.h  tyme.cpp  (+2 more)
tyme/culture/: basic_culture.cpp  basic_culture.h  deities.cpp  deities.h  elements.cpp  elements.h
